Fix wrapping on cookie page and keyboard focus styles

--- a/src/ds-cookie-consent.scss
+++ b/src/ds-cookie-consent.scss
@@ -1,6 +1,17 @@
 #ds-cookie-consent-form {
   input[type="radio"] {
-    margin-right: 5px;
+    margin-right: 7px;
+    + label {
+      cursor: pointer;
+      @media only screen and (max-width: 818px) {
+        display: inline;
+      }
+    }
+  }
+
+  #form_submit:focus {
+    background-color: #fff;
+    color: #26262a;
   }
 }
 
@@ -64,10 +75,13 @@
       text-decoration: none;
       margin-right: 20px;
       border: 2px solid #fff;
-      &:hover {
+      &:hover, &:focus {
         background: #000;
         color: #fff;
         border: 2px solid #fff;
+      }
+      &:focus {
+        outline: 5px solid #fff;
       }
       @media (max-width: 560px) {
         display: block;
@@ -79,14 +93,14 @@
       border: none;
       border: 2px solid transparent;
       text-decoration: underline;
-      &:hover {
+      &:hover, &:focus {
         background: #000;
         color: #fff;
         text-decoration: none;
         border: 2px solid #fff;
       }
       &:focus {
-        color: #fff;
+        outline: 5px solid #fff;
       }
       @media (max-width: 675px) {
         margin-top: 5px;
